[tool.poetry]
name = "netmiko_mock"
version = "0.1.0"
description = ""
authors = ["Patryk <patryk@szulczewski.eu>"]

[tool.poetry.dependencies]
python = "^3.8"
netmiko = "^3.4.0"
textfsm = "^1.1.2"
pyaml = "^21.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
