[tool.poetry]
name = "netmiko_sandbox"
version = "0.1.0"
description = ""
authors = ["Patryk <patryk@szulczewski.eu>"]

[tool.poetry.dependencies]
python = "^3.6"
netmiko = "*"
textfsm = "*"
PyYAML = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
